# doomsound

./: CMakeLists.txt  README.md  doomsound.hpp
example/: CMakeLists.txt  main.cpp
include/: doomsound.hpp
include/doomsound/: codec.hpp  common.hpp  soundcard.hpp
src/: codec.cpp  doomsound.cpp  internal.hpp
wadsnd/: main.cpp  wadsnd.cpp  wadsnd.hpp
